@@ -4,6 +4,7 @@ package org.deltava.acars.workers;
 import java.util.*;
 import java.sql.Connection;
 import java.util.concurrent.*;
+import java.util.stream.Collectors;
 
 import org.deltava.acars.online.*;
 import org.deltava.beans.servinfo.NetworkInfo;
@@ -80,7 +81,7 @@ public class OnlineStatusLoader extends Worker implements Thread.UncaughtExcepti
 
 				try {
 					long sleepTime = (SLEEP_INTERVAL * 1000);
-					List<Loader> tasks = LOADERS.stream().filter(Loader::isEligible).toList();
+					List<Loader> tasks = LOADERS.stream().filter(Loader::isEligible).collect(Collectors.toList()); // needs to be mutable
 					if (!tasks.isEmpty()) {
 						CountDownLatch lt = new CountDownLatch(tasks.size());
 						tasks.forEach(t -> pool.submit(runnableWrapper(lt, t)));
